--- a/tpcc/.executable/.gitignore
+++ b/tpcc/.executable/.gitignore
@@ -80,3 +80,12 @@
 /cpypaym.cpy.omap
 /cpystkl.cpy.omap
 /tpccoptn.cpy.omap
+/BMSDELV_BMSDELV.html
+/BMSDELV_BMSDELV.html.orig
+/BMSMENU_BMSMENU.html
+/BMSMENU_BMSMENU.html.orig
+/BMSNORD_BMSNORD.html
+/BMSORDS_BMSORDS.html
+/BMSPAYM_BMSPAYM.html
+/BMSSTKL_BMSSTKL.html
+/BMSTRCE_BMSTRCE.html
