--- a/tpcc/.executable/.gitignore
+++ b/tpcc/.executable/.gitignore
@@ -1,47 +1,15 @@
-/CountTheTime.class
-/sqldelv$Lnk.class
-/sqldelv$Wrk.class
-/sqldelv.class
-/sqlload$Lnk.class
-/sqlload$Wrk.class
-/sqlload.class
-/sqlnord$Lnk.class
-/sqlnord$Wrk.class
-/sqlnord.class
-/sqlords$Lnk.class
-/sqlords$Wrk.class
-/sqlords.class
-/sqlpaym$Lnk.class
-/sqlpaym$Wrk.class
-/sqlpaym.class
-/sqlstkl$Lnk.class
-/sqlstkl$Wrk.class
-/sqlstkl.class
-/tpccbmsm$Lnk.class
-/tpccbmsm$Wrk.class
-/tpccbmsm$Wrk1.class
-/tpccbmsm.class
-/tpccerrs$Lnk.class
-/tpccerrs$Wrk.class
-/tpccerrs.class
-/tpccplti$Lnk.class
-/tpccplti$Wrk.class
-/tpccplti.class
-/vsmdelv$Lnk.class
-/vsmdelv$Wrk.class
-/vsmdelv.class
-/vsmload$Lnk.class
-/vsmload$Wrk.class
-/vsmload.class
-/vsmnord$Lnk.class
-/vsmnord$Wrk.class
-/vsmnord.class
-/vsmords$Lnk.class
-/vsmords$Wrk.class
-/vsmords.class
-/vsmpaym$Lnk.class
-/vsmpaym$Wrk.class
-/vsmpaym.class
-/vsmstkl$Lnk.class
-/vsmstkl$Wrk.class
-/vsmstkl.class
+/sqldelv.java.smap
+/sqlload.java.smap
+/sqlnord.java.smap
+/sqlords.java.smap
+/sqlpaym.java.smap
+/sqlstkl.java.smap
+/tpccbmsm.java.smap
+/tpccerrs.java.smap
+/tpccplti.java.smap
+/vsmdelv.java.smap
+/vsmload.java.smap
+/vsmnord.java.smap
+/vsmords.java.smap
+/vsmpaym.java.smap
+/vsmstkl.java.smap
