--- a/gradle/ecobol.gradle
+++ b/gradle/ecobol.gradle
@@ -24,7 +24,8 @@ task compileCobol {
             if (aFile.name.endsWith("cbl")) {
                 def proc  = "chmod 755 $ecobolExe".execute();
                 proc.waitFor();
-                proc  = "$ecobolExe -v -sql:mode MSSQL -cc $sourceDir/$aFile.name -out:dir $targetDir".execute();
+                proc  = "$ecobolExe -v  -out:smapcol -sql:mode MSSQL -cc $sourceDir/$aFile.name -out:dir $targetDir".execute();
+                println "stdout: ${proc.in.text}"
                 proc.waitFor();
                 if (proc.exitValue() != 0) {
                     println "stderr: ${proc.err.text}"
