--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -55,7 +55,7 @@ cargo {
     }
 
     remote {
-    hostname = 'tomcatdemoserver.azurewebsites.net'
+    hostname = '52.160.84.53'
     username = 'admin'
     password = 'admin'
   }
