settings for gradle

--- a/gradle/gradle.properties
+++ b/gradle/gradle.properties
@@ -1,3 +1,4 @@
 artifactory_user=graham
 artifactory_password=start123
 artifactory_contextUrl=https://maven.heirloomcomputing.com:443/artifactory
+org.gradle.daemon=false
