--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -59,7 +59,7 @@ cargo {
     }
 
     remote {
-    hostname = '52.160.84.53'
+    hostname = 'tpcctomcat.westus.cloudapp.azure.com'
     username = 'admin'
     password = 'admin'
   }
